Updates the js on the project pages.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,31 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:600&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Prism.js CSS for Syntax Highlighting -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
+    <!-- jsPDF Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <!-- Chart.js Library -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- D3.js Library -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- Prism.js JS for Syntax Highlighting -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
+    <!-- Meta Tags for SEO -->
+    <meta name="description"
+        content="Angela Minardi's professional portfolio showcasing projects in 5G Wireless Networks, Blockchain, and AI-Powered Chatbots.">
+    <meta name="keywords" content="Angela Minardi, Portfolio, 5G, Blockchain, AI Chatbot, Computer Science">
+    <!-- Viewport for Responsive Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <!-- Navigation Bar -->
     <nav>
         <div class="container">
-            <a href="index.html" class="logo">Angela Minardi</a>
-            <div class="nav-toggle">
+            <a href="#hero" class="logo">Angela Minardi</a>
+            <div class="nav-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
             </div>
             <ul class="nav-links">
@@ -48,18 +63,19 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-content">
-                <img src="images/profile.jpg" alt="Angela Minardi" class="profile-img">
+                <img src="images/profile.jpg" alt="Professional photo of Angela Minardi" class="profile-img"
+                    loading="lazy">
                 <div class="about-text">
                     <p>
-                        I am a Computer Science graduate with a passion for networking, software development, and
-                        emerging technologies. My goal is to leverage my technical skills and knowledge to contribute to
-                        innovative projects and make a meaningful impact in the field of technology.
+                        I'm Angela Minardi, a dedicated computer scientist with a strong background in networking,
+                        blockchain technology, and artificial intelligence. I thrive on solving complex problems and
+                        developing innovative solutions that make a tangible impact.
                     </p>
                     <p>
-                        With a strong foundation in programming languages such as Java, Python, and C++, I have
-                        developed a keen interest in areas like 5G network simulations, blockchain technologies, and
-                        AI-driven solutions. I thrive in collaborative environments and am committed to continuous
-                        learning and professional growth.
+                        With hands-on experience in designing and simulating 5G wireless networks, implementing secure
+                        blockchain systems, and creating intelligent AI-powered chatbots, I bring a diverse skill set to
+                        the table. My goal is to leverage technology to drive progress and efficiency in various
+                        industries.
                     </p>
                 </div>
             </div>
@@ -72,48 +88,45 @@
             <h2>Education</h2>
             <div class="education-content">
                 <div class="education-item">
-                    <h3>Western Governor’s University</h3>
-                    <span class="date">Anticipated: Fall 2024</span>
-                    <p><strong>Bachelor of Science, Computer Science</strong></p>
-                    <p>
-                        Relevant Coursework: Object-Oriented Programming I & II, Data Structures and Algorithms,
-                        Database Design, Network Security Foundations.
-                    </p>
+                    <h3>Bachelor of Science in Computer Science</h3>
+                    <span class="date">2024</span>
+                    <p>Western Governors University</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Technical Skills Section -->
+    <!-- Skills Section -->
     <section id="skills">
         <div class="container">
-            <h2>Technical Skills</h2>
+            <h2>Skills</h2>
             <div class="skills-content">
-                <div class="skill-category">
-                    <h3>Networking</h3>
-                    <ul>
-                        <li>Cisco Certified Network Associate (CCNA) - In Progress</li>
-                        <li>TCP/IP Protocols</li>
-                        <li>OSI Model</li>
-                        <li>Network Troubleshooting</li>
-                    </ul>
-                </div>
                 <div class="skill-category">
                     <h3>Programming Languages</h3>
                     <ul>
-                        <li>Java</li>
                         <li>Python</li>
                         <li>C++</li>
-                        <li>C#</li>
+                        <li>JavaScript</li>
+                        <li>Java</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h3>Data Processing & Cloud</h3>
+                    <h3>Technologies & Tools</h3>
                     <ul>
-                        <li>Oracle SQL Database Design</li>
-                        <li>Microsoft Azure IoT Hub</li>
-                        <li>AWS Cloud Computing</li>
-                        <li>Data Visualization with Gnuplot</li>
+                        <li>NS-3 Simulator</li>
+                        <li>TensorFlow & Keras</li>
+                        <li>Blockchain (Ethereum)</li>
+                        <li>Flask & Django</li>
+                        <li>Git & GitHub</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3>Soft Skills</h3>
+                    <ul>
+                        <li>Problem-Solving</li>
+                        <li>Team Collaboration</li>
+                        <li>Communication</li>
+                        <li>Project Management</li>
                     </ul>
                 </div>
             </div>
@@ -128,37 +141,44 @@
                 <!-- Project 1 -->
                 <div class="project-item">
                     <div class="project-img">
-                        <img src="images/project1.jpg" alt="5G Wireless Network Simulation">
+                        <img src="images/project1.jpg" alt="5G Wireless Network Simulation" loading="lazy">
                         <div class="overlay">
-                            <a href="project1.html" class="project-link"><i class="fas fa-eye"></i> View Project</a>
+                            <a href="project1.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <h3><a href="project1.html">5G Wireless Network Simulation</a></h3>
-                    <p>Simulated 5G network performance using NS-3 to analyze throughput, latency, and packet loss under
-                        various conditions.</p>
+                    <p>
+                        Developed a simulation tool to model and analyze 5G wireless networks, focusing on throughput,
+                        latency, and packet loss.
+                    </p>
                 </div>
                 <!-- Project 2 -->
                 <div class="project-item">
                     <div class="project-img">
-                        <img src="images/project2.jpg" alt="Blockchain Implementation">
+                        <img src="images/project2.jpg" alt="Blockchain Implementation" loading="lazy">
                         <div class="overlay">
-                            <a href="project2.html" class="project-link"><i class="fas fa-eye"></i> View Project</a>
+                            <a href="project2.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <h3><a href="project2.html">Blockchain Implementation</a></h3>
-                    <p>Developed a simplified blockchain to understand distributed ledger technology and consensus
-                        algorithms.</p>
+                    <p>
+                        Built a simplified blockchain from scratch to understand distributed ledger technology,
+                        including proof of work and hashing.
+                    </p>
                 </div>
                 <!-- Project 3 -->
                 <div class="project-item">
                     <div class="project-img">
-                        <img src="images/project3.jpg" alt="AI-Powered Chatbot">
+                        <img src="images/project3.jpg" alt="AI-Powered Chatbot" loading="lazy">
                         <div class="overlay">
-                            <a href="project3.html" class="project-link"><i class="fas fa-eye"></i> View Project</a>
+                            <a href="project3.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <h3><a href="project3.html">AI-Powered Chatbot</a></h3>
-                    <p>Created a chatbot using machine learning for natural language processing and understanding.</p>
+                    <p>
+                        Created an AI chatbot that uses machine learning and NLP to interact conversationally, serving
+                        as a personal assistant.
+                    </p>
                 </div>
             </div>
         </div>
@@ -167,41 +187,50 @@
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
-            <h2>Contact Me</h2>
+            <h2>Contact</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <p><i class="fas fa-envelope"></i> <a
-                            href="mailto:r.minardi.angela@gmail.com">r.minardi.angela@gmail.com</a></p>
-                    <p><i class="fas fa-phone"></i> <a href="tel:+13017756380">301-775-6380</a></p>
-                    <p><i class="fas fa-map-marker-alt"></i> Highland, MD 20777</p>
+                    <p>Email: <a href="mailto:angela.minardi@example.com">angela.minardi@example.com</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile"
+                            target="_blank">linkedin.com/in/yourprofile</a></p>
+                    <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/yourgithub</a></p>
                 </div>
-                <!-- Social Media Links -->
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn"><i
-                            class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/yourgithub" target="_blank" aria-label="GitHub"><i
-                            class="fab fa-github"></i></a>
-                    <a href="https://twitter.com/yourtwitter" target="_blank" aria-label="Twitter"><i
-                            class="fab fa-twitter"></i></a>
-                    <!-- Add other social media icons as needed -->
+                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn Profile">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/yourgithub" target="_blank" aria-label="GitHub Profile">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://twitter.com/yourtwitter" target="_blank" aria-label="Twitter Profile">
+                        <i class="fab fa-twitter"></i>
+                    </a>
                 </div>
-                <!-- Contact Form (Optional) -->
-                <!-- 
-                <form action="mailto:r.minardi.angela@gmail.com" method="post" enctype="text/plain">
+                <!-- Optional: Contact Form -->
+                <form action="https://formspree.io/f/yourformid" method="POST">
                     <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
+                    <input type="email" name="_replyto" placeholder="Your Email" required>
                     <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
                     <button type="submit" class="btn">Send Message</button>
                 </form>
-                -->
             </div>
         </div>
     </section>
+
+    <!-- Back to Top Button -->
+    <a href="#hero" class="back-to-top" aria-label="Back to Top">
+        <i class="fas fa-chevron-up"></i>
+    </a>
 
     <!-- Footer -->
     <footer>
         <div class="container">
             <p>&copy; 2024 Angela Minardi. All rights reserved.</p>
+            <ul class="footer-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
     </footer>
 
